<resources>
    <string name="app_name">simple_calculator</string>
    <string name="_1">숫자1</string>
    <string name="_2">숫자2</string>
    <string name="calculator_hint">정수를 입력해 주세요.</string>
    <string name="str_sum">더하기</string>
    <string name="str_minus">빼기</string>
    <string name="str_multiply">곱하기</string>
    <string name="str_into">나누기</string>
    <string name="str_remainder">나머지</string>
    <string name="result">결과:</string>
</resources>