<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">
    <TextView
        android:textColor="#FF6599"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/calculator_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="number"
            android:textAlignment="center"
            android:id="@+id/number1"
            android:hint="@string/_1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="number"
            android:textAlignment="center"
            android:id="@+id/number2"
            android:hint="@string/_2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_sum"
        android:text="@string/str_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_minus"
        android:text="@string/str_minus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_multiply"
        android:text="@string/str_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_into"
        android:text="@string/str_into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_remainder"
        android:text="@string/str_remainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/result"
        android:text="@string/result"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>